# http-server

./: CMakeLists.txt
include/database/: database.hpp
include/networking/HTTP/: HTTP.hpp
include/networking/sockets/: sockets.hpp
src/: main.cpp  structure.tree
src/database/: database.cpp
src/networking/HTTP/: HTTP.cpp
src/networking/sockets/: sockets.cpp
src/templates/: index.html  thing.html
